Fix HTML structure and update image paths

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             text-align: right;
         }
         body{
-            background-image: url(file:///C:/Users/HP/Downloads/html%20project%201/Img2.jpg);
+            background-image: url("Img2.jpg");
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -41,7 +41,7 @@
 </head>
 <body>
     <h1>Portfolio</h1>
-    <img src="file:///C:/Users/HP/Downloads/html%20project%201/Img.jpg" width="200" height="200" align="right" border="5">
+    <img src="Img.jpg" width="200" height="200" align="right" border="5">
 <p> Hey I am Krishna Prasad <br> You Can Call Me as KP<br> Basically I'm persuing My Degree in BCA<br>
 From Bharath University</p>
 <h2 id="demo" onmouseover="mouseOver()" onmouseout="mouseOut()">Ph.no: 9619398229<br> Email: krishnaprasad.kp723@gmail.com</h2>
@@ -55,6 +55,7 @@ From Bharath University</p>
 </script>
 <a href="file:///C:/Users/HP/Downloads/html%20project%201/index.html">Sample Project of HTMl</a><br>
 <a href="file:///C:/Users/HP/Downloads/html%20project%201/Portfolio1.html">Marksheet</a><br>
-<a href="file:///C:/Users/HP/Downloads/html%20project%201/Resume.pdf">Resume</a>
+<a href="Resume.pdf">Resume</a>
 </body>
+
 </html>
